# heimdall

./: CMakeLists.txt  README.md
src/: components.h  entity.h  entityMap.h  entity_map.c  game.c  game.h  main.c  main.cpp
src/heimdall/: component.cpp  component.h  componentHandle.h  componentManager.h  componentMask.cpp  componentMask.h  engine.cpp  engine.h  entity.h  entityHandle.h  entityManager.cpp  entityManager.h  entityMap.h  heimdall.h  system.cpp  system.h  world.cpp  world.h
src/heimdall/system/: h_alloc.cpp  log.h  lt.h  stacktrace.h
src/system/: h_alloc.h  log.c  lt.h  messages.h  stacktrace.c
